# algorithms-project-68

./: .codeclimate.yml  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
router/: __init__.py  prefix_tree.py  router.py
tests/: test_dynamic_router.py  test_static_router.py
